--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="Project.html">Project</a></li>
+                <li><a href="project.html">Project</a></li>
                 <li><a href="certificates.html">Certificates</a></li>
             </ul>
 
@@ -94,5 +94,6 @@
     <script src="js/navbar.js"></script>
 
 </body>
+
 
 </html>
