--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="Project.html">Project</a></li>
+                <li><a href="project.html">Project</a></li>
                 <li><a href="certificates.html">Certificates</a></li>
             </ul>
 
@@ -106,5 +106,6 @@
     <script src="js/navbar.js"></script>
 
 </body>
+
 
 </html>
