--- a/certificates.html
+++ b/certificates.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificates | Rifqi Nur Widyanto</title>
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/certificates.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -31,54 +33,61 @@
         </div>
     </nav>
 
-    <!-- CERTIFICATES -->
+    <!-- CERTIFICATES SECTION -->
     <section id="certificates-page">
         <div class="container">
 
+            <!-- Header -->
             <div class="cert-header">
                 <h1>My <span>Certifications</span></h1>
                 <p>Professional training and achievements</p>
             </div>
 
+            <!-- Certificates Grid -->
             <div class="cert-grid">
 
+                <!-- Certificate Card 1 -->
                 <div class="cert-card">
                     <div class="cert-image">
-                        <img src="img/certificates/sertif.PNG">
+                        <img src="img/certificates/sertif.PNG" alt="Data Analytics Certificate">
                     </div>
                     <div class="cert-info">
                         <h3>Data Analytics</h3>
-                        <p>RevoU MIni Course Intro to Data Analytics</p>
+                        <p>RevoU Mini Course Intro to Data Analytics</p>
                         <span>2025</span>
-                        <a href="img/certificates/RevoU_Mini_Course_Rifqi.pdf" target="_blank" class="cert-btn">View
-                            Certificate</a>
+                        <a href="img/certificates/RevoU_Mini_Course_Rifqi.pdf" target="_blank" class="cert-btn">
+                            View Certificate
+                        </a>
                     </div>
                 </div>
 
+                <!-- Certificate Card 2 -->
                 <div class="cert-card">
                     <div class="cert-image">
-                        <img src="img/certificates/esertif_PM_RIfqi.png">
+                        <img src="img/certificates/esertif_PM_RIfqi.png" alt="Project Manager Certificate">
                     </div>
                     <div class="cert-info">
                         <h3>Project Manager</h3>
                         <p>Karier.Mu</p>
                         <span>2023</span>
-                        <a href="img/certificates/sertifikat-sekolahmu-9259404.pdf" target="_blank"
-                            class="cert-btn">View
-                            Certificate</a>
+                        <a href="img/certificates/sertifikat-sekolahmu-9259404.pdf" target="_blank" class="cert-btn">
+                            View Certificate
+                        </a>
                     </div>
                 </div>
 
+                <!-- Certificate Card 3 -->
                 <div class="cert-card">
                     <div class="cert-image">
-                        <img src="img/certificates/msib.PNG">
+                        <img src="img/certificates/msib.PNG" alt="Certified Internship and Independent Study">
                     </div>
                     <div class="cert-info">
                         <h3>Certified Internship and Independent Study</h3>
                         <p>Udemy</p>
                         <span>2024</span>
-                        <a href="img/certificates/31 Rifqi Nur Widyanto (3).pdf" target="_blank" class="cert-btn">View
-                            Certificate</a>
+                        <a href="img/certificates/31 Rifqi Nur Widyanto (3).pdf" target="_blank" class="cert-btn">
+                            View Certificate
+                        </a>
                     </div>
                 </div>
 
@@ -87,8 +96,8 @@
         </div>
     </section>
 
+    <!-- Scripts -->
     <script src="js/navbar.js"></script>
 </body>
-
 
 </html>
