--- a/certificates.html
+++ b/certificates.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="cert-info">
                         <h3>Project Manager</h3>
-                        <p>Karier.Mu</p>
+                        <p>Karier.Mu Responsible for planning, executing, and closing projects on time and within budget</p>
                         <span>2023</span>
                         <a href="img/certificates/sertifikat-sekolahmu-9259404.pdf" target="_blank" class="cert-btn">
                             View Certificate
@@ -83,7 +83,7 @@
                     </div>
                     <div class="cert-info">
                         <h3>Certified Internship and Independent Study</h3>
-                        <p>Udemy</p>
+                        <p>Completed internship involving data entry and data analysis at LLDikti Region IV, gaining experience in managing and interpreting educational data</p>
                         <span>2024</span>
                         <a href="img/certificates/31 Rifqi Nur Widyanto (3).pdf" target="_blank" class="cert-btn">
                             View Certificate
@@ -101,3 +101,4 @@
 </body>
 
 </html>
+
