--- a/certificates.html
+++ b/certificates.html
@@ -3,10 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificates | Rifqi Nur Widyanto</title>
 
-    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/certificates.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -33,72 +31,72 @@
         </div>
     </nav>
 
-    <!-- CERTIFICATES SECTION -->
+    <!-- CERTIFICATES -->
     <section id="certificates-page">
         <div class="container">
 
-            <!-- Header -->
             <div class="cert-header">
                 <h1>My <span>Certifications</span></h1>
                 <p>Professional training and achievements</p>
             </div>
 
-            <!-- Certificates Grid -->
             <div class="cert-grid">
 
-                <!-- Certificate Card 1 -->
                 <div class="cert-card">
                     <div class="cert-image">
-                        <img src="img/certificates/sertif.PNG" alt="Data Analytics Certificate">
+                        <img src="img/certificates/sertif.PNG">
                     </div>
                     <div class="cert-info">
                         <h3>Data Analytics</h3>
-                        <p>RevoU Mini Course Intro to Data Analytics</p>
+                        <p>RevoU MIni Course Intro to Data Analytics</p>
                         <span>2025</span>
-                        <a href="img/certificates/RevoU_Mini_Course_Rifqi.pdf" target="_blank" class="cert-btn">
-                            View Certificate
-                        </a>
+                        <a href="img/certificates/RevoU_Mini_Course_Rifqi.pdf" target="_blank" class="cert-btn">View
+                            Certificate</a>
                     </div>
                 </div>
 
-                <!-- Certificate Card 2 -->
                 <div class="cert-card">
                     <div class="cert-image">
-                        <img src="img/certificates/esertif_PM_RIfqi.png" alt="Project Manager Certificate">
+                        <img src="img/certificates/esertif_PM_RIfqi.png">
                     </div>
                     <div class="cert-info">
                         <h3>Project Manager</h3>
-                        <p>Karier.Mu Responsible for planning, executing, and closing projects on time and within budget</p>
+                        <p>Karier.Mu</p>
                         <span>2023</span>
-                        <a href="img/certificates/sertifikat-sekolahmu-9259404.pdf" target="_blank" class="cert-btn">
-                            View Certificate
-                        </a>
+                        <a href="img/certificates/sertifikat-sekolahmu-9259404.pdf" target="_blank"
+                            class="cert-btn">View
+                            Certificate</a>
                     </div>
                 </div>
 
-                <!-- Certificate Card 3 -->
                 <div class="cert-card">
                     <div class="cert-image">
-                        <img src="img/certificates/msib.PNG" alt="Certified Internship and Independent Study">
+                        <img src="img/certificates/msib.PNG">
                     </div>
                     <div class="cert-info">
                         <h3>Certified Internship and Independent Study</h3>
-                        <p>Completed internship involving data entry and data analysis at LLDikti Region IV, gaining experience in managing and interpreting educational data</p>
+                        <p>Udemy</p>
                         <span>2024</span>
-                        <a href="img/certificates/31 Rifqi Nur Widyanto (3).pdf" target="_blank" class="cert-btn">
-                            View Certificate
-                        </a>
+                        <a href="img/certificates/31 Rifqi Nur Widyanto (3).pdf" target="_blank" class="cert-btn">View
+                            Certificate</a>
                     </div>
                 </div>
+                <div class="cert-card">
+                    <div class="cert-image">
+                        <img src="img/certificates/TOEIC_rifqi.png">
+                    </div>
+                    <div class="cert-info">
+                        <h3>Certified of TOEIC</h3>
+                        <p>LPM POLITEKNIK PIKSI GANESHA</p>
+                        <span>2025</span>
+                        <a href="img/certificates/TOEIC_rifqi.pdf" target="_blank" class="cert-btn">View
+                            Certificate</a>
+                    </div>
 
-            </div>
-
-        </div>
+                </div>
     </section>
 
-    <!-- Scripts -->
     <script src="js/navbar.js"></script>
 </body>
 
 </html>
-
