--- a/certificates.html
+++ b/certificates.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="cert-info">
                         <h3>Certified of TOEIC</h3>
-                        <p>LPM POLITEKNIK PIKSI GANESHA</p>
+                        <p>Language Laboratory Piksi Ganesha Polytechnic </p>
                         <span>2025</span>
                         <a href="img/certificates/TOEIC_rifqi.pdf" target="_blank" class="cert-btn">View
                             Certificate</a>
@@ -100,3 +100,4 @@
 </body>
 
 </html>
+
