--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="project-links">
-                        <a href="#" class="btn">Live Demo</a>
+                        <a href="https://rifqinw.github.io/Rifqi_Portofolio/" class="btn">Live Demo</a>
                         <a href="#" class="btn outline">GitHub</a>
                     </div>
                 </div>
@@ -96,5 +96,6 @@
 
     <script src="js/navbar.js"></script>
 </body>
+
 
 </html>
