--- a/project.html
+++ b/project.html
@@ -90,7 +90,7 @@
                  <div class="project-card">
                     <img src="img/Project/VD.PNG">
                     <h3>tudent Data Change Visualization Insight Dashboard</h3>
-                    <p>SA dashboard providing insights into changes in student data.</p>
+                    <p>Dashboard providing insights into changes in student data.</p>
                     <div class="project-tech">
                         <span>Figma</span>
                         <span>Prototype</span>
@@ -108,5 +108,6 @@
 
 
 </html>
+
 
 
